k8s.bak/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linka-ingress
  namespace: linka-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rpm: "100"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  rules:
    - host: selinka.ufc.br
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: linka-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linka-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - selinka.ufc.br
      secretName: selinka-tls
